Acionando recursos de quantidade de registros por página

--- a/checkbox_completo.html
+++ b/checkbox_completo.html
@@ -90,6 +90,7 @@ $(document).ready(function() {
                 }
             }
         },
+        pageLength: 10, // Define o número de registros por página
         "processing": true, // Ativa mensagem de processando
 		//oLanguage: {sProcessing: "<div id='loader'>TESTE</div>"}, // Personaliza mensagem de processando
         "ajax": {
