--- a/checkbox_completo.html
+++ b/checkbox_completo.html
@@ -91,6 +91,7 @@ $(document).ready(function() {
             }
         },
         pageLength: 10, // Define o número de registros por página
+        "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Personaliza filtro de quantidade de registro por página
         "processing": true, // Ativa mensagem de processando
 		//oLanguage: {sProcessing: "<div id='loader'>TESTE</div>"}, // Personaliza mensagem de processando
         "ajax": {
@@ -102,7 +103,7 @@ $(document).ready(function() {
                data.status = $("#status").val();
 			}
         },
-        dom: 'Bfrtip', // Ativa opções de exportações da tabela
+        dom: 'Blfrtip', // Ativa exibição de diversas opções -> 'B' = Botões | 'l' = Filtro de quantidade de registros por página
         select: true, // Somente as linhas selecionadas (Usado para ação de exportar)
         buttons: [ // Configura os botões que serão exibidos
             {
