Habilitando / desabilitando campo de pesquisa

--- a/checkbox_completo.html
+++ b/checkbox_completo.html
@@ -117,6 +117,7 @@ $(document).ready(function() {
         pageLength: 10, // Define o número de registros por página
         "lengthMenu": [[10, 25, 50, -1], [10, 25, 50, "Todos"]], // Personaliza filtro de quantidade de registro por página
         "processing": true, // Ativa mensagem de processando
+		"searching": true, // Habilita / Desabilita campo de pesquisa
 		//oLanguage: {sProcessing: "<div id='loader'>TESTE</div>"}, // Personaliza mensagem de processando
         "ajax": {
             "url": 'arrays.json',
